--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -1,95 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Answer Details</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 20px;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 1.6;
-            margin: 0 0 10px;
-        }
-
-        .header {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 20px;
-            color: #007bff;
-        }
-
-        .answer {
-            margin: 10px 0;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #f9f9f9;
-        }
-
-        .explanation {
-            /* font-style: italic; */
-            color: #555;
-        }
-
-        .answer.explanation {
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            line-height: 1.5;
-            margin: 10px 0;
-        }
-
-        .answer.explanation strong {
-            font-weight: bold;
-        }
-
-        .answer.explanation br {
-            content: "\A";
-            white-space: pre;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <p id="feedback" data-correct-answer="<%= correctAnswer %>" data-user-answer="<%= userAnswer %>"
-            data-explanation="<%= explanation %>">
-        </p>
-        <p class="header">Answer Details</p>
-        <p class="answer">
-            <strong>Correct Answer:</strong>
-            <%= correctAnswer %>
-        </p>
-        <p class="answer">
-            <strong>Your Answer:</strong>
-            <%= userAnswer %>
-        </p>
-        <div class="answer explanation">
-            <strong>Explanation:</strong><br />
-            <%- explanation %>
-        </div>
-    </div>
-    <script src="/js/speech.js"></script>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -171,6 +79,29 @@
         .button:hover {
             background-color: #0056b3;
         }
+
+        .correct {
+            background-color: rgb(209, 255, 209);
+        }
+
+        .incorrect {
+            background-color: #ffcdcd;
+        }
+
+        .example_code_snipett {
+            background: #000;
+            color: #fff;
+            border-radius: 7px;
+            padding: 10px;
+            padding-bottom: 10px;
+            padding-bottom: 1px;
+        }
+        .button_container{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+        }
     </style>
 </head>
 
@@ -180,29 +111,39 @@
             data-explanation="<%= explanation %>">
         </p>
         <p class="header">Answer Details</p>
-        <p class="answer">
-            <strong>Correct Answer:</strong>
-            <%= correctAnswer %>
-        </p>
-        <p class="answer">
-            <strong>Your Answer:</strong>
-            <%= userAnswer %>
-        </p>
-        <div class="answer explanation">
-            <strong>Explanation:</strong><br />
-            <%- explanation %>
-        </div>
-        
-        <% if (example) { %>
-            <div class="answer explanation">
-                <strong>Example:</strong><br />
-                <%- example %>
-            </div>
-        <% } %>
-        
+        <% if (correctAnswer!==userAnswer) { %>
+            <p class="answer correct">
+                <strong>Correct Answer:</strong>
+                <%= correctAnswer %>
+            </p>
+            <% } %>
+
+                <p class="answer <%= (correctAnswer === userAnswer) ? 'correct' : 'incorrect' %>">
+                    <strong>Your Answer:</strong>
+                    <%= userAnswer %>
+                </p>
+
+                <div class="answer explanation">
+                    <strong>Explanation:</strong><br />
+
+                    <%- explanation %>
+                </div>
+
+                <% if (example) { %>
+                    <div class="answer explanation">
+                        <strong>Example:</strong><br />
+                        <div class="example_code_snipett">
+                            <%- example %>
+                        </div>
+
+                    </div>
+                    <% } %>
+<div class="button_container">
     <button class="button" id="nextQuestionButton">Next Question</button>
+
+</div>
     </div>
-    <script src="/js/speech.js"></script>
+    <script src="/js/speech.js" type="module"></script>
 </body>
 
 </html>
