--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -100,6 +100,10 @@
             <div>
                 <a href="/quiz/resources/webpack">Webpack</a>
             </div>
+            <div>
+                <a href="/quiz/resources/html">HTML</a>
+            </div>
+            
         </div>
     </div>
 </body>
