--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -133,7 +133,7 @@
                     <div class="answer explanation">
                         <strong>Example:</strong><br />
                         <div class="example_code_snipett">
-                            <%- example %>
+                            <%= example %>
                         </div>
 
                     </div>
