--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -103,6 +103,9 @@
             <div>
                 <a href="/quiz/resources/html">HTML</a>
             </div>
+            <div>
+                <a href="/quiz/resources/css">CSS</a>
+            </div>
             
         </div>
     </div>
