added react effect Hooks to resources

--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -132,6 +132,10 @@
             <div class="resources_class">
                 <a href="/quiz/resources/css">CSS</a>
             </div>
+            <div class="resources_class">
+                <a href="/resources/react/hooks/effect">React Effect Hooks</a>
+            </div>
+
 
         </div>
     </div>
