--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -135,7 +135,9 @@
             <div class="resources_class">
                 <a href="/quiz/resources/react/hooks/effect">React Effect Hooks</a>
             </div>
-
+            <div class="resources_class">
+                <a href="/quiz/resources/react/hooks/useContext">React Effect Hooks</a>
+            </div>
 
         </div>
     </div>
