--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -136,7 +136,7 @@
                 <a href="/quiz/resources/react/hooks/effect">React Effect Hooks</a>
             </div>
             <div class="resources_class">
-                <a href="/quiz/resources/react/hooks/useContext">React Effect Hooks</a>
+                <a href="/quiz/resources/react/hooks/useContext">React useContext Hook</a>
             </div>
 
         </div>
