--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -215,6 +215,13 @@
                         <a href="/quiz/resources/react/hooks/useContext">React useContext Hook</a>
                     </div>
                 </div>
+                <div class="category">
+                    <h4>Java</h4>
+                   
+                    <div class="resources_class">
+                        <a href="/quiz/resources/react/hooks/sdkman">React useContext Hook</a>
+                    </div>
+                </div>
             </div>
         </div>
 
