--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -219,7 +219,7 @@
                     <h4>Java</h4>
                    
                     <div class="resources_class">
-                        <a href="/quiz/resources/java/sdkman">React useContext Hook</a>
+                        <a href="/quiz/resources/java/sdkman">SDKMAN!</a>
                     </div>
                 </div>
             </div>
