--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Topic</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+
         /* body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -13,41 +18,34 @@
             margin: 20px;
         } */
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Reenie Beanie", cursive;
+            font-weight: 400;
+            font-style: normal;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
             background-color: #f4f4f4;
             color: #333;
-            margin: 20px;
-            display: flex;
-            flex-direction: row;
-            align-items: flex-start;
-            justify-content: center;
-            height: 90vh;
         }
 
-        /* .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        } */
         .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            flex: 1;
-            /* border: solid; */
+            padding: 30px;
+            border-radius: 5px;
+            max-width: 800px;
+            margin: 20px auto;
+
+            background-color: #fdfdfd;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px),
+                radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px);
+            background-position: 0 0, 25px 25px;
+            background-size: 50px 50px;
         }
 
         h2 {
-            font-size: 24px;
-            color: #007bff;
-            margin-bottom: 20px;
-            text-align: center;
+            color: red;
+            text-align: start;
+            border-bottom: solid 2px red;
         }
 
         form {
@@ -64,23 +62,27 @@
 
         select {
             padding: 10px;
-            font-size: 16px;
+            font-size: 20px;
             border: 1px solid #ddd;
             border-radius: 4px;
             margin-bottom: 20px;
             width: 100%;
             max-width: 300px;
+            font-family: "Reenie Beanie", cursive;
+            font-weight: 600;
         }
 
         button {
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 17px;
             color: #fff;
             background-color: #007bff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-family: "Reenie Beanie", cursive;
+            font-weight: 600;
         }
 
         button:hover {
@@ -104,34 +106,39 @@
 
         .container_resource {
             display: flex;
+            justify-content: space-around;
             flex-wrap: wrap;
-            gap: 20px;
+            /* gap: 20px; */
+            width: 100%;
         }
 
         .category {
-            flex: 1 1 calc(50% - 20px);
+            /* flex: 1 1 calc(50% - 20px); */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             border-radius: 5px;
             background-color: #fff;
+            width: 40%;
+            margin-top: 20px;
         }
 
         .category h4 {
-            color: #0056b3;
-            border-bottom: 2px solid #0056b3;
+            color: red;
+            border-bottom: 2px solid red;
             padding-bottom: 5px;
             margin-bottom: 10px;
         }
 
         .resources_class a {
             display: block;
-            color: #007bff;
+            color: blue;
             text-decoration: none;
             margin: 5px 0;
+            font-weight: 600;
         }
 
         .resources_class a:hover {
-            text-decoration: underline;
+            text-decoration: none;
         }
 
         @media (max-width: 600px) {
@@ -146,7 +153,6 @@
     <div class="container">
         <h2>Select a Topic</h2>
         <form action="/quiz/select-topic" method="POST">
-            <label for="topic">Choose a topic:</label>
             <select name="selectedTopic" id="topic">
                 <% topics.forEach((topic)=> { %>
                     <option value="<%= topic %>">
@@ -154,32 +160,11 @@
                     </option>
                     <% }) %>
             </select>
-            <button type="submit">Start Quiz</button>
+            <button type="submit" >Start Quiz</button>
         </form>
-        <!-- <div>
-            <h3>Resources</h3>
-            <div class="resources_class">
-                <a href="/quiz/resources/nodejs">Nodejs</a>
-            </div>
-            <div class="resources_class">
-                <a href="/quiz/resources/webpack">Webpack</a>
-            </div>
-            <div class="resources_class">
-                <a href="/quiz/resources/html">HTML</a>
-            </div>
-            <div class="resources_class">
-                <a href="/quiz/resources/css">CSS</a>
-            </div>
-            <div class="resources_class">
-                <a href="/quiz/resources/react/hooks/effect">React Effect Hooks</a>
-            </div>
-            <div class="resources_class">
-                <a href="/quiz/resources/react/hooks/useContext">React useContext Hook</a>
-            </div>
 
-        </div> -->
-        <div >
-            <h3>Resources</h3>
+        <div>
+            <h2>Resources</h2>
 
             <div class="container_resource">
                 <div class="category">
@@ -217,9 +202,16 @@
                 </div>
                 <div class="category">
                     <h4>Java</h4>
-                   
+
                     <div class="resources_class">
                         <a href="/quiz/resources/java/sdkman">SDKMAN!</a>
+                    </div>
+                </div>
+
+                <div class="category">
+                    <h4>XSL</h4>
+                    <div class="resources_class">
+                        <a href="/quiz/resources/xslt">xslt</a>
                     </div>
                 </div>
             </div>
