--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -63,13 +63,14 @@
         select {
             padding: 10px;
             font-size: 20px;
-            border: 1px solid #ddd;
+            border: 2px solid blue;
             border-radius: 4px;
             margin-bottom: 20px;
             width: 100%;
             max-width: 300px;
             font-family: "Reenie Beanie", cursive;
             font-weight: 600;
+            color: blue;
         }
 
         button {
@@ -160,7 +161,7 @@
                     </option>
                     <% }) %>
             </select>
-            <button type="submit" >Start Quiz</button>
+            <button type="submit">Start Quiz</button>
         </form>
 
         <div>
