--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -6,20 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Answer Details</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Reenie Beanie", cursive;
+            font-weight: 400;
+            font-style: normal;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
             background-color: #f4f4f4;
             color: #333;
-            margin: 20px;
         }
 
         .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 5px;
+            max-width: 800px;
+            margin: 20px auto;
+
+            background-color: #fdfdfd;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px),
+                radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px);
+            background-position: 0 0, 25px 25px;
+            background-size: 50px 50px;
         }
 
         p {
@@ -96,7 +110,8 @@
             padding-bottom: 10px;
             padding-bottom: 1px;
         }
-        .button_container{
+
+        .button_container {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -138,10 +153,10 @@
 
                     </div>
                     <% } %>
-<div class="button_container">
-    <button class="button" id="nextQuestionButton">Next Question</button>
+                        <div class="button_container">
+                            <button class="button" id="nextQuestionButton">Next Question</button>
 
-</div>
+                        </div>
     </div>
     <script src="/js/speech.js" type="module"></script>
 </body>
