--- a/views/question.ejs
+++ b/views/question.ejs
@@ -6,25 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Question</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Reenie+Beanie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sacramento&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Reenie Beanie", cursive;
+            font-weight: 400;
+            font-style: normal;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
             background-color: #f4f4f4;
             color: #333;
-            margin: 20px;
         }
 
         .container {
+            padding: 30px;
+            border-radius: 5px;
             max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+
+            background-color: #fdfdfd;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px),
+                radial-gradient(rgba(0, 0, 0, 0.02) 1px, transparent 1px);
+            background-position: 0 0, 25px 25px;
+            background-size: 50px 50px;
         }
 
         h2 {
+            font-family: "Reenie Beanie", cursive;
             font-size: 24px;
-            color: #007bff;
+            color: red;
             margin-bottom: 20px;
         }
 
@@ -38,10 +53,12 @@
         }
 
         label {
+            font-family: "Reenie Beanie", cursive;
             display: block;
-            font-size: 16px;
+            font-size: 20px;
             margin-bottom: 10px;
             cursor: pointer;
+            font-weight: 600;
         }
 
         input[type="radio"] {
@@ -49,6 +66,7 @@
         }
 
         button {
+            font-family: "Reenie Beanie", cursive;
             padding: 10px 20px;
             font-size: 16px;
             color: #fff;
@@ -57,6 +75,8 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-size: 16px;
+            font-weight: 600;
         }
 
         button:hover {
@@ -83,8 +103,7 @@
                 <%= questionNumber %>/<%= questionCount%>
             </h4>
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"
-            onclick="window.location.href='/quiz/select-topic'"
-                style="cursor: pointer;">
+                onclick="window.location.href='/quiz/select-topic'" style="cursor: pointer;">
                 <path
                     d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
             </svg>
