--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -210,6 +210,9 @@
                     <div class="resources_class">
                         <a href="/quiz/resources/xslt">xslt</a>
                     </div>
+                    <div class="resources_class">
+                        <a href="/quiz/resources/struts">struts</a>
+                    </div>
                 </div>
             </div>
         </div>
