--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -214,6 +214,13 @@
                         <a href="/quiz/resources/struts">struts</a>
                     </div>
                 </div>
+                <div class="category">
+                    <h4>Data Interchange Formats</h4>
+
+                    <div class="resources_class">
+                        <a href="/quiz/resources/java/sdkman">XML and JSON</a>
+                    </div>
+                </div>
             </div>
         </div>
 
