--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -218,7 +218,7 @@
                     <h4>Data Interchange Formats</h4>
 
                     <div class="resources_class">
-                        <a href="/quiz/resources/dif/XMLAndJSON">XML and JSON</a>
+                        <a href="/quiz/resources/dif">XML and JSON</a>
                     </div>
                 </div>
             </div>
