--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -207,18 +207,27 @@
                     <div class="resources_class">
                         <a href="/quiz/resources/java/sdkman">SDKMAN!</a>
                     </div>
-                    <div class="resources_class">
-                        <a href="/quiz/resources/xslt">xslt</a>
-                    </div>
-                    <div class="resources_class">
-                        <a href="/quiz/resources/struts">struts</a>
-                    </div>
+
                 </div>
                 <div class="category">
                     <h4>Data Interchange Formats</h4>
 
                     <div class="resources_class">
                         <a href="/quiz/resources/dif">XML and JSON</a>
+                    </div>
+                </div>
+                <div class="category">
+                    <h4>Transformation</h4>
+
+                    <div class="resources_class">
+                        <a href="/quiz/resources/xslt">xslt</a>
+                    </div>
+                </div>
+                <div class="category">
+                    <h4>Web Development Framework</h4>
+
+                    <div class="resources_class">
+                        <a href="/quiz/resources/struts">struts</a>
                     </div>
                 </div>
             </div>
