--- a/views/select-topic.ejs
+++ b/views/select-topic.ejs
@@ -239,6 +239,14 @@
                         <a href="/quiz/resources/xslt">XSLT</a>
                     </div>
                 </div>
+                <div class="category">
+                    <h4>database management systems.</h4>
+
+                    <div class="resources_class">
+                        <a href="/quiz/resources/sql">SQL</a>
+                    </div>
+                </div>
+
                 <div class="category cat-w100">
                     <h4>Web Development Framework</h4>
 
